--- a/src/components/index.css
+++ b/src/components/index.css
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 3rem;
 }
 
 h3 {
@@ -37,7 +37,7 @@ p {
   grid-template-columns: 1fr;
   row-gap: 4rem;
 
-  padding: 20px;
+  padding: 50px 20px 20px 20px;
 }
 
 .balance-income-expense {
@@ -100,7 +100,14 @@ h3 {
   box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.075);
   padding: 10px;
   margin-top: 10px;
+}
+
+.income-border {
   border-right: 4px solid #69db7c;
+}
+
+.expense-border {
+  border-right: 4px solid #d9480f;
 }
 
 .new-transaction {
@@ -129,7 +136,7 @@ h3 {
   display: flex;
   flex-direction: column;
 
-  margin-top: 10px;
+  margin-top: 25px;
 }
 
 .button {
