--- a/src/components/css/query.css
+++ b/src/components/css/query.css
@@ -13,6 +13,10 @@
 /**************************/
 
 @media (max-width: 34em) {
+  .main-container {
+    padding: 30px 50px 50px 50px;
+  }
+
   .balance-income-expense {
     grid-template-columns: 1fr;
     row-gap: 3rem;
