--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -180,12 +180,12 @@ h3 {
 }
 
 .copyright {
-  margin-top: 20px;
+  margin-top: 2rem;
   font-size: 1.2rem;
-  color: #69db7c;
 }
 
 .developer:link,
 .developer:visited {
   text-decoration: none;
+  color: #69db7c;
 }
